--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -24,6 +24,7 @@ $theme-colors: (
 
 body {
   background-image: url("./imgs/background.png");
+ 
   background-position: top;
   background-repeat: no-repeat;
 }
@@ -43,11 +44,18 @@ body {
   border-radius: 100px;
 }
 
+
 .item-img {
   height: 150px;
   object-fit: cover;
 }
-
+@media (max-width: 500px) {
+  .user-info {
+  min-width: auto !important;
+  }
+  
+ 
+}
 .crop-text-3 {
   -webkit-line-clamp: 3;
   overflow: hidden;
